pages/main/elections_style.css
/* ... */
#form {
    position: relative;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    transition: all 1s;
    width: 50px;
    height: 50px;
    background: white;
    box-sizing: border-box;
    border-radius: 4px;
    border: 4px solid white;
    padding: 5px;
}

input {
    position: absolute;
    top: 0;
    left: 0;
    width: 0;
    height: 42.5px;
    line-height: 30px;
    outline: 0;
    border: 0;
    font-size: 1em;
    border-radius: 20px;
    padding: 0 20px;
}

.fa {
    box-sizing: border-box;
    padding: 10px;
    width: 42.5px;
    height: 42.5px;
    position: absolute;
    top: 0;
    right: 0;
    border-radius: 4px;
    color: #07051a;
    text-align: center;
    font-size: 1.2em;
    transition: all 1s;
}
#form:focus-within,
#form:hover,
#form:valid{
    width: 30dvh;
    cursor: pointer;
}

#form:hover input,
#form:focus-within input,
#form:valid input {
    width: 100%;
} 

#form:hover .fa,
#form:focus-within .fa,
#form:valid .fa {
    background: #07051a;
    color: white;
}

#searchButton {
    display: none;
    position: absolute;
    top: 70px;
    bottom: 0;
    left: 0;
    right: 0;
    font-size: 20px;
    color: white;
    padding: 4px;
    min-height: max-content;
    background: transparent;
    outline: 0;
    border: 1px solid #303030;
    border-radius: 4px;
    text-align: center;
    width: 100%;
    cursor: pointer;
    z-index: 1;
}

#form:valid button {
    display: block;
    z-index: 1;
}

#searchBarContainer {
    position: relative;
    display: inline-block;
    top: 13.3dvh;
    left: 4dvw;
    z-index: 1;
}

#searchResults {
    position: absolute;
    display: inline-block;
    top: 20dvh;
    left: 4.5dvw;
    max-height: 30dvh;
    overflow: scroll;
    border-radius: 10px;
    z-index: 1;
}

#searchResults.scrollable {
    -webkit-mask-image: linear-gradient(
        to bottom,
        black 0%,
        black calc(100% - 40px),
        transparent 100%
    );

    mask-image: linear-gradient(
        to bottom,
        black 0%,
        black 93%,
        transparent 100%
    );
}

/* HIDE mask-image IF SCROLLED TO BOTTOM OF RESULTS TABLE */
#searchResults.at-bottom {
    mask-image: none;
    -webkit-mask-image: none;
}

.results-table {
    font-family: 'Verdana';
    width: 200px;
    font-size: small;
    background-color: white;
    border-collapse: collapse;
    border-radius: 10px;
    z-index: 1;
}

.scrolled .results-table thead:nth-of-type(2) th {
    box-shadow: 0 0.25rem 0.5rem rgba(0,0,0,0.5);
    transition: all .5s ease;
}

.scrolled .results-table .searchResultsColumns th {
    box-shadow: 0 0.25rem 0.5rem rgba(0,0,0,0.5);
    transition: all .5s ease;
}

.results-table .searchResultsColumns th {
    transition: all .5s ease;
}

.results-table thead:nth-of-type(2) th {
    transition: all .5s ease;
}

thead {
    background: #000000;
    color: whitesmoke;
}

th, td {
  padding: 0.5rem;
}

#ridingHeader, #ridingHeader th {
    position: sticky;
    top: 0;
}

/* STICKY HEADERS FOR DISTRICT VOTING RESULTS HEADERS */
.results-table:has(#ridingHeader) #districtResultsColumns {
    position: sticky;
    top: 15%;
}

.results-table:has(#ridingHeader) #districtResultsColumns th {
    position: sticky;
    top: 15%;
}
/* STICKY HEADERS FOR SEARCH RESULTS HEADERS */
.searchResultsColumns, .searchResultsColumns th {
    position: sticky;
    top: 0;
}

#ridingHeader {
    font-size: large;
}

/* ONLY DARKEN TABLE ROWS IF SEARCH RESULTS, NOT IF VOTING RESULTS*/
.results-table.results-table:not(:has(#ridingHeader)) tbody tr {
    transition: all 0.3s ease;
}

.results-table.results-table:not(:has(#ridingHeader)) tbody tr:hover {
    background-color: #c6c6c6;
    transition: all 0.3s ease;
}

input[type="search"]::-webkit-search-cancel-button {
  -webkit-appearance:none;
}

#map {
    position: absolute;
    top: 10%;
    left: -1px;
    height: 90dvh;
    width: 100dvw;
    z-index: -10;
}

#legend {
    position: absolute;
    bottom: 4dvh;
    right: 1dvw;
    background-color: rgb(245, 245, 245, 0.9);
    border-radius: 10px;
    font-family: 'Verdana';
    font-size: small;
}

.legend-scale {
    overflow: hidden;
    max-height: 500px;
    margin-bottom: 1dvh;
    transition: all .4s ease;
}

.legend-scale.collapsed {
    max-height: 0;
}

.legend-title {
    margin-top: 1dvh;
    text-align: center;
    font-weight: bold;
}

.legend-labels {
    position: relative;
    margin-right: 1dvw;
    padding-left: 1dvw;
    list-style-type: none;
}

.legendPartySquares {
    display: inline-block;
    position: relative;
    width: 10px;
    height: 10px;
    margin-right: 1dvw;
}

.arrow {
    position: relative;
    display: inline-block;
    border: solid black;
    border-width: 0 3px 3px 0;
    padding: 5px;
    top: -3px;
    left: 30%;
    transition: all 0.5s ease;
}

.down {
    transform: rotate(45deg);
    -webkit-transform: rotate(45deg);
}

.legend-scale.collapsed ~ .legend-title .arrow.down,
#legend:has(.legend-scale.collapsed) .arrow.down {
    transform: rotate(-135deg);
    -webkit-transform: rotate(-135deg);
    top: 4px;
}

#closeTableButton {
    position: absolute;
    display: none;
    font-size: x-large;
    font-weight: normal;
    font-family: 'Verdana';
    color: whitesmoke;
    top: 20dvh;
    left: 4.5dvw;
    padding-left: 0.5rem;
    z-index: 10;
    transition: all 0.5s ease;
}

#closeTableButton:hover {
    color: red;
}

#mapContainer {
    opacity: 50%;
}

#loadingSpinner {
    display: flex;
    position: absolute;
    left: 45%;
    top: 45dvh;
    margin: 0;
    width: 100px;
    height: 100px;
    border: 12px solid #f3f0f0;
    border-top: 12px solid #00A7EC;
    border-radius: 50%;
    z-index: 10;
    animation: spin 1s linear infinite;
}

@keyframes spin {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(360deg);
    }
}
/* ... */

